--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-watch": "^4.3.5",
     "postcss-flexibility": "^1.1.0",
     "require-dir": "^0.3.0",
+    "styleselect": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
