--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "gulp": "gulp default",
     "sass": "gulp compileSass",
     "js": "gulp compileJs",
+    "templates": "gulp compileTemplates",
     "watch": "gulp watch",
     "build": "gulp build"
   },
@@ -32,5 +33,8 @@
     "styleselect": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "gulp-nunjucks-render": "^2.0.0"
   }
 }
