--- a/package.json
+++ b/package.json
@@ -4,32 +4,38 @@
     "gulp": "gulp default",
     "sass": "gulp compileSass",
     "js": "gulp compileJs",
+    "templates": "gulp compileTemplates",
     "watch": "gulp watch",
     "build": "gulp build"
   },
   "dependencies": {
-    "autoprefixer": "^6.3.3",
-    "babel-core": "^6.17.0",
-    "babel-preset-es2015": "^6.16.0",
+    "pikaday": "^1.5.1",
+    "styleselect": "^1.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.5.3",
+    "babel-core": "^6.18.2",
+    "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
-    "browser-sync": "^2.11.1",
-    "browserify": "^13.1.0",
-    "chalk": "^1.1.1",
+    "browser-sync": "^2.17.6",
+    "browserify": "^13.1.1",
+    "chalk": "^1.1.3",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-clean-css": "^2.0.3",
-    "gulp-concat": "^2.6.0",
-    "gulp-if": "^2.0.0",
-    "gulp-merge-media-queries": "^0.2.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-concat": "^2.6.1",
+    "gulp-iconfont": "^8.0.1",
+    "gulp-if": "^2.0.2",
+    "gulp-merge-media-queries": "^0.2.1",
     "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^6.1.0",
+    "gulp-nunjucks-render": "^2.0.0",
+    "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.2.0",
+    "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5",
-    "require-dir": "^0.3.0",
-    "styleselect": "^1.0.0",
+    "gulp-watch": "^4.3.10",
+    "require-dir": "^0.3.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
